cert-manager/myapp-ingress-ssl-prebuild.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: myapp
  namespace: default
spec:
  tls:
  - secretName: myapp-tls
    hosts:
    - myapp.example.local
  rules:
    - host: myapp.example.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: myapp
              port: 
                number: 3000
